--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    background-color: black;
+    background-color: white;
 }
 *{
     margin: 0;
@@ -18,25 +18,25 @@ body{
     left: 0;
     width: 100%;
     padding: 20px 12%;
-    background: #000(0,0,0,0,8);
+    background: #0000(0,0,0,0,8);
     backdrop-filter: blur(10px);
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 100;
     border-style: solid; 
-    border-color: #ffffff;
+    border-color: #000000;
     border-width: 0px 0px 3px 0px;
 }
 .logo{
     font-size: 25px;
-    color: #ffffff;
+    color: #000000;
     font-weight: 600;
     transition: 0.3s ease;
 }
 .navbar a{
     font-size: 18;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     font-weight: 500;
     margin: 0 20px;
     border-bottom: 3px solid transparent;
@@ -69,7 +69,7 @@ body{
     font-weight: 700;
 }
 .tittle h1 {
-    color: #ffffff;
+    color: #000000;
     font-weight: 500;
     font-size: 32px;
 }
@@ -78,7 +78,7 @@ body{
 }
 .btn-download button{
     background-color: #F0768B;
-    color: #ffffff;
+    color: #000000;
     font-size: 16px;
     font-weight: 500;
     width: 200px;
@@ -107,7 +107,7 @@ body{
     width: 100%;
     height: 100vh;
     border-style: solid;
-    border-color: white;
+    border-color: rgb(0, 0, 0);
     border-width: 5px;
     border-radius: 20px;
     padding-top: 64px;
@@ -120,12 +120,12 @@ body{
     font-weight: 700;
 }
 .description h1{
-    color: #ffffff;
+    color: #000000;
     font-size: 32px;
     font-weight: 500;
 }
 .about-contact p {
-    color: #ffffff;
+    color: #000000;
     font-weight: 500;
     font-size: 32px;
 }
