--- a/style.css
+++ b/style.css
@@ -108,12 +108,12 @@ body{
 .container-about-me{
     margin-top: 105px;
     width: 100%;
-    height: 100vh;
-    border-style: solid;
-    border-color: rgb(0, 0, 0);
-    border-width: 5px;
+    height: 100%;
+    box-shadow: 0px 4px 4px 0px #FFFFFF;
+    box-shadow: 0px 4px 4px 0px #00000040;
     border-radius: 20px;
     padding-top: 64px;
+    padding-bottom: 64px;
     padding-left: 67px;
     padding-right: 67px;
 }
@@ -131,4 +131,17 @@ body{
     color: #000000;
     font-weight: 500;
     font-size: 32px;
+}
+.icon-all{
+    margin-top: 33px;
+    display: flex;
+    gap: 41px;
+}
+.icon-frame{
+    width: 48px;
+    height: 48px;
+}
+.icon-frame img{
+    width: 48px;
+    height: 48px;
 }
