--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ body{
     color: #F0768B;
     font-size: 54px;
     font-weight: 700;
+    text-align: center;
 }
 .description h1{
     color: #000000;
@@ -144,4 +145,24 @@ body{
 .icon-frame img{
     width: 48px;
     height: 48px;
+}
+.container-education{
+    width: 100%;
+    height: 100%;
+    box-shadow: 0px 4px 4px 0px #FFFFFF;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    padding-top: 30px;
+    padding-left: 67px;
+    padding-right: 67px;
+    padding-bottom: 30px;
+    border-radius: 20px;
+    margin-top: 10%;
+}
+.education{
+    padding-left: 46px;
+    padding-right: 46px;
+}
+.tittle-education h1{
+    text-align: center;
+    font-size: 54px;
 }
