--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body{
     box-sizing: border-box;
     font-family: 'Poppins',sans-serif;
     text-decoration: none;
-    list-style: none;
 }
 .header{
     position: fixed;
@@ -165,4 +164,8 @@ body{
 .tittle-education h1{
     text-align: center;
     font-size: 54px;
+}
+.content-education ul {
+    list-style: disc; 
+    padding-left: 20px;
 }
