--- a/style.css
+++ b/style.css
@@ -169,3 +169,10 @@ body{
     list-style: disc; 
     padding-left: 20px;
 }
+.content-education li{
+    font-size: 32px;
+}
+.content-education{
+    margin-top: 30px;
+
+}
