--- a/style.css
+++ b/style.css
@@ -174,5 +174,32 @@ body{
 }
 .content-education{
     margin-top: 30px;
-
 }
+.content-skills{
+    margin-top: 43px;
+}
+.title-skills h1{
+    text-align: center;
+    font-size: 54px;
+}
+.container-icon-skills{
+    display: flex;
+    gap: 60px;
+    justify-content: center;
+    margin-top: 51px;
+}
+.icon-skills {
+    width: 320px;
+    height: 314px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon-skills img {
+    width: 215px;
+    height: 252px;
+}
+
