--- a/style.css
+++ b/style.css
@@ -197,9 +197,74 @@ body{
     justify-content: center;
     align-items: center;
 }
-
 .icon-skills img {
     width: 215px;
     height: 252px;
+}
+.title-contact{
+    margin-top: 10%;
+}
+.title-contact h1{
+    text-align: center;
+    font-size: 54px;
+}
+.contact{
+    padding-left: 46px;
+    padding-right: 46px;
+}
+.container-contact{
+    display: flex;
+    justify-content: space-between;
+}
+.container-get-in-touch{
+    width: 564px;
+    height: 763px;
+    border-radius: 20px;
+    box-shadow: 0px 4px 4px 0px #00000040;
+}
+.title-get-in-touch{
+    padding-top: 10px;
+    padding-left: 46px;
+    padding-right: 52px;
+    padding-bottom: 35px;
+}
+.title-get-in-touch h1{
+    text-align: center;
+    font-size: 38px;
+}
+.form-fill label{
+    font-size: 20px;
+}
+.form-contact{
+    padding-top: 10px;
+    padding-left: 46px;
+    padding-right: 52px;
+    padding-bottom: 35px;
+}
+.form-fill{
+    margin-bottom: 52px;
+}
+.form-fill input{
+    width: 100%;
+    height: 44px;
+    border-radius: 10px;
+    background-color: #D9D9D9;
+    border-style: none;
+    padding: 10px;
+}
+.form-fill textarea{
+    width: 100%;
+    height: 194px;
+    border-radius: 10px;
+    background-color: #D9D9D9;
+    border-style: none;
+    padding: 10px;
+}
+.button-send button{
+    background-color: #F0768B;
+    width: 110px;
+    height: 38px;
+    border-radius: 10px;
+    border-style: none;
 }
 
