--- a/style.css
+++ b/style.css
@@ -211,6 +211,7 @@ body{
 .contact{
     padding-left: 46px;
     padding-right: 46px;
+    margin-top: 10%;
 }
 .container-contact{
     display: flex;
@@ -267,4 +268,12 @@ body{
     border-radius: 10px;
     border-style: none;
 }
+.container-porto{
+    margin-top: 10%;
+}
+.title-porto h1{
+    text-align: center;
+    font-size: 54px;
+}
+
 
