--- a/style.css
+++ b/style.css
@@ -276,4 +276,64 @@ body{
     font-size: 54px;
 }
 
+[type=radio] {
+    display: none;
+  }
+  
+  #slider {
+    height: 861px;
+    width: 446px;
+    position: relative;
+    perspective: 1000px;
+    transform-style: preserve-3d;
+    margin: auto;
+  }
+  
+  #slider label {
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    position: absolute;
+    left: 0; right: 0;
+    cursor: pointer;
+    transition: transform 0.4s ease;
+  }
+  
+  #slider label img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 4px;
+  }
+  
+  #s1:checked ~ #slide2 {
+    transform: translate3d(15%,0,-100px);
+  }
+  
+  #s1:checked ~ #slide3 {
+    transform: translate3d(30%,0,-200px);
+  }
+  
+  #s2:checked ~ #slide1 {
+    transform: translate3d(-15%,0,-100px);
+  }
+  
+  #s2:checked ~ #slide3 {
+    transform: translate3d(15%,0,-100px);
+  }
+  
+  #s3:checked ~ #slide1 {
+    transform: translate3d(-30%,0,-200px);
+  }
+  
+  #s3:checked ~ #slide2 {
+    transform: translate3d(-15%,0,-100px);
+  }
+  
+  #s1:checked ~ #slide1,
+  #s2:checked ~ #slide2,
+  #s3:checked ~ #slide3 {
+    transform: translate3d(0,0,0);
+  }
+
 
